# IncrementalBackup2

./: .gitignore  BackupFormat.md  BackupUsage.md  CHANGELOG.md  CONTRIBUTING.md  ChangesFromOriginal.md  README.md  RestoreUsage.md  backup.py  backup_command.py  backup_complete_info.py  backup_manifest.py  backup_meta.py  backup_metadata.py  backup_start_info.py  backup_sum.py  filesystem.py  incremental_backup.py  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini  utility.py
.github/workflows/: python-app.yml  python-package-verify.yml
docs/: BackupUsage.md  RestoreUsage.md
incremental_backup/: __main__.py  backup.py  backup_command.py  exception.py  main.py  prune.py  restore.py
incremental_backup/backup/: __init__.py  backup.py  exclude.py  filesystem.py  plan.py  sum.py
incremental_backup/backup_meta/: __init__.py  manifest.py  metadata.py  sum.py
incremental_backup/cli/: main.py
incremental_backup/commands/: __init__.py  backup.py  command.py  restore.py
incremental_backup/meta/: __init__.py  complete_info.py  manifest.py  meta.py  metadata.py  start_info.py  structure.py
incremental_backup/utility/: console.py  path.py
test/: conftest.py  helpers.py  test_backup.py  test_backup_complete_info.py  test_backup_manifest.py  test_backup_meta.py  test_backup_start_info.py  test_backup_sum.py  test_filesystem.py  test_main.py  test_prune.py  test_restore.py  test_utility.py
test/test_backup/: test_backup.py  test_exclude.py  test_filesystem.py  test_plan.py  test_sum.py
test/test_backup_meta/: test_complete_info.py  test_manifest.py  (+4 more)
(+17 files in other folders)
