[metadata]
name = incremental_backup-MCDeltaT
version = 1.0.0
author = Reece Jones
author_email = reece.jones131@gmail.com
description = Incremental file backup tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MC-DeltaT/IncrementalBackup2
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English

[options]
packages = incremental_backup
python_requires = >= 3.9
